k8s/frigate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      containers:
        - name: frigate
          image: blakeblackshear/frigate:0.8.4-amd64
          securityContext:
            privileged: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "1000m"
            limits:
              memory: "1Gi"
              cpu: "2000m"
          ports:
            - containerPort: 5000
          volumeMounts:
          - mountPath: /config/config.yml
            name: frigate-config
            subPath: config.yml
          - mountPath: /media/frigate
            name: frigate-media
          - mountPath: /dev/bus/usb
            name: tpu
          imagePullPolicy: IfNotPresent
      volumes:
        - name: frigate-config
          configMap:
            name: frigate-config
            items:
              - key: config.yml
                path: config.yml
        - name: frigate-media
          hostPath:
            path: /opt/frigate/
            type: DirectoryOrCreate
        - name: tpu
          hostPath:
            path: /dev/bus/usb
---
apiVersion: v1
kind: Service
metadata:
  name: frigate-service
spec:
  ports:
  - port: 80
    targetPort: 5000
    name: tcp
  selector:
    app: frigate
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frigate-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: frigate.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: frigate-service
          servicePort: 80
